--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,6 @@ dependencies {
 
     implementation 'com.github.jgabrielfreitas:BlurImageView:1.0.1'
     implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation "org.java-websocket:Java-WebSocket:1.3.8"
+    implementation 'com.squareup.retrofit:retrofit:1.9.0'
 }
