--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.baizelmathew.spotifycontroller"
-        minSdkVersion 23
+        minSdkVersion 26
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -40,4 +40,6 @@ dependencies {
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation "org.java-websocket:Java-WebSocket:1.3.8"
     implementation 'com.squareup.retrofit:retrofit:1.9.0'
+
+    implementation "com.android.support:support-compat:28.0.0"
 }
