code clean up and add basic routing option in server

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
 
-        <receiver android:name=".utils.ServiceBroadcastReceiver"  android:exported="true">
+        <receiver android:name=".service.ServiceBroadcastReceiver"  android:exported="true">
         </receiver>
 
         <service
