--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     defaultConfig {
         applicationId "com.baizelmathew.spotifycontroller"
         minSdkVersion 26
-        targetSdkVersion 28
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -39,7 +39,7 @@ dependencies {
     implementation 'org.nanohttpd:nanohttpd:2.2.0'
 
     implementation project(':spotify-app-remote-release-0.6.1')
-    implementation 'com.spotify.sdk:spotify-auth-release:1.1.0@aar'
+    implementation 'com.spotify.android:spotify-auth-release:1.2.3@aar'
     implementation "com.google.code.gson:gson:2.8.5"
 
     implementation 'com.github.jgabrielfreitas:BlurImageView:1.0.1'
